# otelTraceAnalyzer

./: .gitignore  CMakeLists.txt  CREDITS.txt  CTestTestfile.cmake  LICENSE  README.md  build-wheels.sh  come_with_me.py  mem_test.sh  metrics.json  release.sh  run_tests.sh  setup.py  test_lib.py
analyzer/: __init__.py  otelanalyzer.pyi
cTests/: allTests.cpp  analyzer_tests.cpp  mem_test.c  struct_tests.cpp
docs/installation/: README.md  analyzer.py  embedder.py  test.py
otelanalyzer/: __init__.py  cli.py  otelanalyzer.pyi
pyTests/: analyzer.py  test_counter_semantics.py  test_python_trace_spans.py  test_ready_subset.py  test_release_docs.py  test_service_is_ok.py  test_span_parser_parent_lookup.py
src/: analyzer.c  analyzer.h  counters.c  counters.h  plugin_manager.c  plugin_manager.h  plugins.c  service.h  span.c  span.h  trace.c  trace.h
src/distribution/: README.md  some-name.txt
src/hashstructs/: hashset.c  hashset.h  hashset_itr.c  hashset_itr.h  test_hst.c
src/plugins/: example_plugin.c  example_plugin.h
src/python_wrapper/: init_module.c  py_analyzer.c  py_analyzer.h  py_plugin_manager.c  py_plugin_manager.h  py_struct_translator.c  py_struct_translator.h  py_structs.c  py_structs.h  py_translator.c  py_translator.h  test_setup.py
src/structures/: config.h  counters.c  counters.h  service.c  service.h  servicemap.c  servicemap.h  span.c  span.h  trace.c  trace.h
